Исправить комментарии после ревью №1